# RayTracingOneWeekend

./: CMakeLists.txt
config/: Findglm.cmake
include/: Ray.h
include/Image/: ImageWriter.h
src/: Ray.cpp  main.cpp
src/Image/: PPMWriter.cpp
